--- a/frontend/src/pages/TagPage/components/TagListView/DesktopTagListView/DesktopTagListView.module.css
+++ b/frontend/src/pages/TagPage/components/TagListView/DesktopTagListView/DesktopTagListView.module.css
@@ -1,12 +1,11 @@
 .tagList {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 64px);
+  height: 100vh;
+  width: 300px;
   overflow-x: hidden;
   overflow-y: scroll;
   scrollbar-width: none;
-  width: 300px;
-  background-color: var(--background-color);
 }
 
 .tagListContent {
@@ -14,15 +13,16 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-
+  position: relative;
 }
 
 .tagListScrollContainer {
   flex: 1;
-  overflow-y: auto;
-  padding: 1rem;
+  overflow-y: scroll;
   scrollbar-width: none;
-
+  -webkit-overflow-scrolling: touch;
+  scroll-behavior: smooth;
+  height: 100%;
 }
 
 .tagListLoading,
