--- a/frontend/src/pages/NotePage/NotePage.module.css
+++ b/frontend/src/pages/NotePage/NotePage.module.css
@@ -9,7 +9,9 @@
   position: relative;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .titleInput {
