--- a/frontend/src/pages/CalendarPage/components/CalendarView/CalendarView.module.css
+++ b/frontend/src/pages/CalendarPage/components/CalendarView/CalendarView.module.css
@@ -76,6 +76,7 @@
 @media (max-width: 600px) {
   .timeColumn {
     min-width: 50px;
+    height: 1495px; /* 55px header + 1440px content (24 hours * 60px) */
   }
 }
 
@@ -98,6 +99,12 @@
   top: 0;
   z-index: 30;
   background-color: var(--color-card-bg, #1e1e1e);
+}
+
+@media (max-width: 600px) {
+  .timeSlotHeader {
+    height: 55px;
+  }
 }
 
 .timeSlot {
