--- a/frontend/src/pages/CalendarPage/CalendarPage.module.css
+++ b/frontend/src/pages/CalendarPage/CalendarPage.module.css
@@ -7,7 +7,8 @@
   overflow: hidden;
   position: relative;
   padding: 1.5rem;
-  margin-top: 60px;
+  margin-top: .5em;
+  margin-left: .5em;
   width: calc(100vw - 182px);
   box-sizing: border-box;
 }
