--- a/frontend/src/pages/CalendarPage/components/CalendarView/CalendarView.module.css
+++ b/frontend/src/pages/CalendarPage/components/CalendarView/CalendarView.module.css
@@ -63,4 +63,11 @@
   }
 }
 
+/* Virtualized container for day columns */
+.virtualizedContainer {
+  position: relative;
+  height: 100%;
+  flex-shrink: 0;
+}
+
 /* Time column styles moved to TimeColumn component */
