--- a/frontend/src/pages/NotePage/NotePage.module.css
+++ b/frontend/src/pages/NotePage/NotePage.module.css
@@ -1,5 +1,5 @@
 .page {
-  min-height: 100vh;
+  height: 100vh;
   background-color: var(--color-bg);
   color: var(--color-text);
 }
@@ -8,7 +8,7 @@
   margin: 0;
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 85vh;
   overflow: hidden;
   display: flex;
   flex-direction: column;
