--- a/frontend/src/pages/TagPage/components/TagListView/DesktopTagListView/DesktopTagListView.module.css
+++ b/frontend/src/pages/TagPage/components/TagListView/DesktopTagListView/DesktopTagListView.module.css
@@ -1,11 +1,29 @@
 .tagList {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 300px;
+  height: 100%;
+  width: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
   scrollbar-width: none;
+  position: relative;
+  flex: 0 0 auto;
+}
+
+.tagListHeader {
+  height: 6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+}
+
+.tagListTitle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  overflow: hidden;
 }
 
 .tagListContent {
