--- a/frontend/src/pages/CalendarPage/CalendarPage.module.css
+++ b/frontend/src/pages/CalendarPage/CalendarPage.module.css
@@ -6,10 +6,8 @@
   flex-direction: column;
   overflow: hidden;
   position: relative;
-  padding: 1.5rem;
-  margin-top: 0.5em;
-  margin-left: 0.5em;
-  width: calc(100vw - 182px);
+  padding: 0.5rem;
+  width: calc(100vw - 85px); /* Sidebar width */
   box-sizing: border-box;
 }
 
@@ -19,9 +17,35 @@
   text-align: center;
 }
 
+.calendarContent {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  min-height: 0;
+}
+
+.calendarContent > * {
+  flex: 1;
+  min-height: 0;
+  display: flex;
+  flex-direction: column;
+}
+
 @media (max-width: 1200px) {
   .calendarPage {
-    margin-left: 0;
     width: 100vw;
+  }
+}
+
+@media (max-width: 768px) {
+  .calendarPage {
+    padding: 0.25rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .calendarPage {
+    padding: 0.25rem;
   }
 }
